--- a/estilos/style.css
+++ b/estilos/style.css
@@ -29,7 +29,6 @@ section#telefone {
 
     height: 627px;
     width: 311px;
-    background-color: blue;
     background: url(../imagens/frame-iphone.png) no-repeat;
 }
 
@@ -39,4 +38,23 @@ iframe#tela {
     left: 22px;
     width: 269px;
     height: 471px;
+}
+
+section#redes-sociais {
+    text-align: right;
+}
+
+section#redes-sociais img {
+    width: 50px;
+    margin: 5px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.397);
+    box-sizing: border-box;
+}
+
+section#redes-sociais img:hover {
+    border: 2px solid rgba(255, 255, 255, 0.603);
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5 px 10px rgba(0, 0, 0, 0.521);
+    transition: .3s;
 }
