--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,5 +1,10 @@
 @charset "UTF-8"
 
+::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
+}
+
 * {
     margin: 0px;
     padding: 0px;
@@ -36,7 +41,7 @@ iframe#tela {
     position: relative;
     top: 80px;
     left: 22px;
-    width: 269px;
+    width: 267px;
     height: 471px;
 }
 
